艰苦了半天，终于，持久化到sqlserver数据库实现

--- a/src/main/resources/templates/details_table.html
+++ b/src/main/resources/templates/details_table.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html xmln="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>设备信息详情</title>
 </head>
 <body>
-
+<th:block></th:block>
 </body>
 </html>
