--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<!--suppress ALL -->
-<html xmln="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>错误页面</title>
@@ -28,5 +25,6 @@
         </el-col>
     </div>
 </div>
+<th:block></th:block>
 </body>
 </html>
