--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<html xmln="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>登录成功</title>
@@ -14,18 +13,20 @@
 <body>
 
 <table border="1" width="1200" class="container">
-    <thead>
-    <tr>
+    <thead align="center" class="header">
+    <tr align="center">
        <h2>登录成功，欢迎光临</h2>
     </tr>
     </thead>
     <tbody>
-    <tr th:if="${peoplename} eq 0">
+    <tr th:if="${people_name} eq 0">
         <td colspan="6">没有数据</td>
     </tr>
-    <tr th:each="peoplename : ${peoplename}">
+    <tr th:each="peoplename : ${people_name}">
         <td th:text="${peoplename}">1</td>
     </tr>
+   <td colspan="10" align="center"><a class="btn btn-dark" href="show_table.html" th:href="@{/selectAllAntiTest}">显示设备信息</a>
+   </td>
     </tbody>
 </table>
 </body>
