--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,16 +1,29 @@
+<!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>登录界面</title>
+    <style>
+        * {font-family: Microsoft YaHei, Tahoma, Helvetica, Arial, sans-serif;}
+        .header {background-color: #f5f5f5;padding: 20px;}
+        .header a {padding: 0 20px;}
+        .container {padding: 50px;margin:50px auto;}
+        .footer {height: 40px;background-color: #f5f5f5;border-top: 1px solid #ddd;padding: 20px;}
+    </style>
 </head>
 <body>
-请输入用户名与密码登录
-<form action="/userLogin" method="post">
-    用户名：<input type="text" name="username" /><br>
-    密&nbsp;&nbsp;&nbsp;码：<input type="password" name="password" /><br>
-    <input type="submit" value="登录" />
-    <a href="/registerpage" target="_blank">注册</a>
+<header class="header">
+    请输入用户名与密码登录
+</header>
+<div class="container">
+<form th:action="@{/userLogin}" th:method="post">
+    用户名：<input type="text" id="username" name="username" /><br>
+    密&nbsp;&nbsp;&nbsp;码：<input type="password" id="password" name="password" /><br>
+    <input type="submit" th:value="登录" />
 </form>
-
+</div>
+<footer class="footer">
+    <span class="header-panel">sunhaoyue@2019.6.20</span>
+</footer>
 </body>
 </html>
