完成前端保存数据到sqlserver数据库，实现insert数据！调试加载静态资源。 html5与thymeleaf模板使用问题

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,16 +11,17 @@
 </head>
 <body>
 <div>
-    <div>
+    <div style="margin:auto;">
         <el-col :span="12">
-            <img src="/resources/static/assets/images/404.png" alt="App Logo" />
+            <img border="0" src="images/404.png" alt="App Logo"/>
         </el-col>
-                <el-col :span="12">
+        <el-col :span="12">
             <div style="margin-left: 100px;margin-top: 60px">
                 <h1 class="color-main">OOPS!</h1>
                 <h2 style="color: #606266">很抱歉，页面它不小心迷路了！</h2>
                 <div style="color:#909399;font-size: 14px">请检查您输入的网址是否正确，请点击以下按钮返回主页或者发送错误报告</div>
-                <el-button style="margin-top: 20px" type="primary" round @click="handleGoMain">返回首页</el-button>
+                <a style="margin-top: 20px" type="primary" href="show_table.html"
+                   th:href="@{/selectAllAntiTest}">返回首页</a>
             </div>
         </el-col>
     </div>
