--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,6 +21,8 @@
     密&nbsp;&nbsp;&nbsp;码：<input type="password" id="password" name="password" /><br>
     <input type="submit" th:value="登录" />
 </form>
+    <td colspan="10" align="center"><a class="btn btn-dark" href="register.html" th:href="@{/registerpage}">注册详情</a>
+    </td>
 </div>
 <footer class="footer">
     <span class="header-panel">sunhaoyue@2019.6.20</span>
