实现前端加载资源，路径配置有关！重点关注！

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -13,7 +13,7 @@
 <div>
     <div style="margin:auto;">
         <el-col :span="12">
-            <img border="0" src="images/404.png" alt="App Logo"/>
+            <img border="0" th:src="@{/images/404.png}"  src="../static/images/404.png" alt="App Logo"/>
         </el-col>
         <el-col :span="12">
             <div style="margin-left: 100px;margin-top: 60px">
