--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -23,8 +23,8 @@
     </div>
     <div style="margin-top:0%;">
     <video width="320" height="240" controls>
-        <source src="../video/car的副本.mp4" type="video/mp4">">
-        <source src="movie.ogg" type="video/ogg">
+        <source th:src="@{/hello/宠物消毒.mp4}" src="../static/hello/宠物消毒.mp4" type="video/mp4">
+        <!--source src="movie.ogg" type="video/ogg" -->
     </video>
     </div>
 </div>
