--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -23,7 +23,7 @@
     </div>
     <div style="margin-top:0%;">
     <video width="320" height="240" controls>
-        <source th:src="@{/hello/宠物消毒.mp4}" src="../static/hello/宠物消毒.mp4" type="video/mp4">
+        <source th:src="@{/video/狗.mp4}" src="../static/video/狗.mp4" type="video/mp4">
         <!--source src="movie.ogg" type="video/ogg" -->
     </video>
     </div>
